testsuite/tests/splice-imports/SI25.stderr
SI25.hs:16:13: error: [GHC-28914]
    • Level error:
      ‘nestedCode’ is used at level -2 but it is bound at level -1
        • imported at level -1 from ‘SI25Helper’ at SI25.hs:6:1-24
    • In the untyped splice: $(nestedCode "nested")
      In the untyped splice: $($(nestedCode "nested"))

